Provide a default action in Suspend session config

Makes sure that checking "Suspend session" in System Settings -> Energy
Saving does something without any further configuration. The default
action is to suspend to RAM if it's possible, otherwise it defaults to
shutting down the system.

BUG: 475866